# kyouth-data-ai

./: .gitignore  README.md
week1/: README.md  main.py  pyproject.toml
week1/data/2_silver/: AI & Workflow Automation Associate Job in Kuala Lumpur - Jobstreet.json  (+88 more)
week1/queries/: add_content_hash_column.sql  add_quality_column.sql  avg_description_length.sql  clear_jobs_quarantine.sql  count_null_company.sql  count_null_description.sql  count_null_job_title.sql  create_jobs.sql  create_jobs_quarantine.sql  drop_jobs_quarantine.sql  insert_job.sql  longest_description.sql  quarantine_low_quality.sql  select_all_jobs.sql  select_content_hash.sql  shortest_description.sql  table_info_jobs.sql  update_job.sql
week1/src/: ingestor.py  loader.py  processor.py  profiler.py  sql_utils.py
week2/: .env.example  README.md  db_server.py  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week2/queries/: clear_tech_stack.sql  select_all_tech_stacks.sql  select_untagged_jobs.sql  update_tech_stack.sql
week2/scripts/: prepare_sample_db.py
week3/: .env.example  .gitignore  README.md  docker-compose.yml
week3/backend/: Dockerfile  pyproject.toml
week3/backend/src/: app.py  secrets_util.py
week3/backend/src/week_2/: find_skill_gaps.py  prompt_model.py
week3/frontend/: Dockerfile  pyproject.toml
week3/frontend/src/: app.py  jobs_db.py
week3/frontend/src/static/: chat.css  chat.js  dashboard.css  dashboard.js
week3/frontend/src/templates/: chat_page.html  dashboard.html
week3/secrets/: google_api_key.txt.example
