[project]
name = "kyouth-data-ai-week2"
version = "0.1.0"
description = "Week 2 LLM setup and prompt utilities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pypdf>=5.0.0",
    "ruff>=0.15,<0.16",
]
