[project]
name = "backend"
version = "0.1.0"
description = "Week 3 backend chat API (FastAPI + Week 2 prompt_model)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15,<0.16",
    "uvicorn>=0.49.0",
]
