[project]
name = "frontend"
version = "0.1.0"
description = "Week 3 frontend web server (FastAPI + Jinja templates)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "ruff>=0.15,<0.16",
    "uvicorn>=0.49.0",
]
